# connect-four

./: CMakeLists.txt  core.cpp  core.h  helpers.cpp  helpers.h  main.cpp  profile.cpp
.devcontainer/: Dockerfile
tests/: print_board.cpp  win_diagonal_bl-tr.cpp  win_diagonal_tl-br.cpp  win_horizontal.cpp  win_none.cpp  win_test.cpp  win_test.h  win_vertical.cpp
